sanger/sites/humanembryo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humanembryo
spec:
  selector:
    matchLabels:
      app: humanembryo
  replicas: 1
  template:
    metadata: 
      name: humanembryo
      labels:
        app: humanembryo
    spec:
      volumes:
        - name: indexfiles
          emptyDir: {}
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: humanembryo
        ports:
        - containerPort: 80
          name: http
        command: ["/bin/sh", "-c", "cp -r /data/kubespray/sanger/sites/humanembryo/site/. /usr/share/nginx/html/ && nginx -g 'daemon off;'"]
        volumeMounts:
          - name: indexfiles
            mountPath: /data
        resources:
          requests:
            memory: "128M"
            cpu: "0.1"
          limits:
            memory: "512M"
            cpu: "0.7"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humanembryo-integrated
spec:
  selector:
    matchLabels:
      app: humanembryo-integrated
  replicas: 1
  template:
    metadata: 
      name: humanembryo-integrated
      labels:
        app: humanembryo-integrated
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: humanembryo-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.15.0
        imagePullPolicy: IfNotPresent
        name: humanembryo-integrated
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["/bin/sh"]
        args: ["-c", "yes | cellxgene launch /data/embryo_integrated.h5ad -t 'Embryo integrated' --host 0.0.0.0 --port 5005 --disable-annotations --scripts https://www.humanembryo.org/zxtm/piwik2.js"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "256M"
            cpu: "0.5"
          limits:
            memory: "6Gi"
            cpu: 1
---
