sanger/sites/humanembryo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: humanembryo
  labels:
    app: humanembryo
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
  selector:
    app: humanembryo
---
apiVersion: v1
kind: Service
metadata:
  name: humanembryo-integrated
  labels:
    app: humanembryo-integrated
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: humanembryo-integrated
---
